# csa_lab4

./: .gitignore  README.md  golden_test.py  machine.py  pyproject.toml  translator.py
.github/workflows/: ci.yml
comp/: __init__.py  processor.py
examples/: cat.alg  double_precision.alg  euler6.alg  hello.alg  hello_user_name.alg  interrupt_demo.alg  simple_vector.alg  sort.alg  vector_test.alg
golden/: cat.json  double_precision.json  euler6.json  hello.json  hello_user_name.json  interrupt_demo.json  simple_vector.json  sort.json
isa/: machine_code.py  opcodes.py
lang/: ast_nodes.py  codegen.py  lexer.py  parser.py  tokens.py
tests/: test_lexer.py  test_processor.py
